# DTC

./: .env.example  .gitignore  README.md  clustering_dev.ipynb  exp_five.ipynb  exp_four.ipynb  exp_one.ipynb  exp_six.ipynb  exp_three.ipynb  exp_two.ipynb  full_arch_dev.ipynb  main.ipynb  pyproject.toml  temp.ipynb
notebooks/: model_dev.ipynb
old/: audit.ipynb  debug.ipynb  exp_1.ipynb  exp_2.ipynb  exp_3.ipynb  main.ipynb
src/: main.py  poly_TAE.py
src/datasets/: __init__.py  polynomial.py
src/experiments/: poly_TAE.py
src/metrics/performance/: accuracy.py
src/metrics/similarity/: __init__.py  complexity_inv.py  correlation.py  euclidean.py
src/models/: TAE.py  __init__.py  cluster.py  decoder.py  encoder.py
src/scripts/polynomial/: generate_data.py  to_numpy.py
